--- a/src/static/index.html
+++ b/src/static/index.html
@@ -16,7 +16,20 @@
       <section id="activities-container">
         <h3>Available Activities</h3>
         <div id="activities-list">
-          <!-- Activities will be loaded here -->
+          <!-- Activities will be loaded here as cards with structure:
+          <div class="activity-card">
+            <h4>Activity Name</h4>
+            <p>Description</p>
+            <p><strong>Time:</strong> Time info</p>
+            <div class="participants">
+              <h5>Participants</h5>
+              <ul>
+                <li>Participant 1</li>
+                <li>Participant 2</li>
+              </ul>
+            </div>
+          </div>
+          -->
           <p>Loading activities...</p>
         </div>
       </section>
